--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,11 @@
+* {
+padding: 0;
+margin: 0;
+}
 
-
+body {
+  background-image: url('../public/6202258.jpg'); /* Textura */
+}
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -16,3 +22,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.card-body{
+ border-radius: 16px;
+}
+
+#title-acudit{
+  background-color: white;
+}
+
+#jokes-container {
+  margin: 1rem;
+}
