--- a/src/style.css
+++ b/src/style.css
@@ -22,12 +22,23 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.navbar {
+  background-color: transparent;
+  .navbar-brand {
+    font-size: 32px;
+    margin-left: 4rem;
+  }
+}
+
 .card-body{
  border-radius: 16px;
+
 }
 
 #title-acudit{
-  background-color: white;
+  font-size: 48px;
+  color: white;
+  -webkit-text-stroke: 2px #000000; /*posa "reborde" a la lletra*/
 }
 
 #jokes-container {
