--- a/src/style.css
+++ b/src/style.css
@@ -38,9 +38,10 @@ body {
 #title-acudit{
   font-size: 48px;
   color: white;
-  -webkit-text-stroke: 2px #000000; /*posa "reborde" a la lletra*/
+  -webkit-text-stroke: 1.5px #000000; /*posa "reborde" a la lletra*/
 }
 
 #jokes-container {
   margin: 1rem;
+  font-size: 24px;
 }
