Exercici 5 finalitzat: implementat acudits de Chuck Norris

--- a/src/style.scss
+++ b/src/style.scss
@@ -50,6 +50,7 @@ body {
 }
 
 #title-acudit{
+  font-weight: bold;
   font-size: 48px;
   color: white;
   -webkit-text-stroke: 1.5px #000000; /*posa "reborde" a la lletra*/
